--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon"
+    "server": "nodemon",
+    "postinstall": "npm install --prefix server && npm install --prefix frontend-app"
   },
   "repository": "https://github.com/ielvisd/Node-Blog.git",
   "author": "Elvis Ibarra <ielvisd@gmail.com>",
