--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon",
-    "postinstall": "npm install --prefix server && npm install --prefix frontend-app"
+    "server": "nodemon"
   },
   "repository": "https://github.com/ielvisd/Node-Blog.git",
   "author": "Elvis Ibarra <ielvisd@gmail.com>",
@@ -19,6 +18,11 @@
     "helmet": "^3.15.0",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
-    "sqlite3": "^4.0.3"
+    "sqlite3": "^4.0.3",
+    "axios": "^0.18.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-scripts": "2.1.1",
+    "styled-components": "^4.0.3"
   }
 }
