--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon"
+    "server": "nodemon",
+    "install": "(cd client && yarn) && (cd server && yarn)",
+    "start": "concurrently \"cd blog && PORT=3000 yarn start\" \"cd server && PORT=9000 yarn start\""
   },
   "repository": "https://github.com/ielvisd/Node-Blog.git",
   "author": "Elvis Ibarra <ielvisd@gmail.com>",
@@ -18,11 +20,6 @@
     "helmet": "^3.15.0",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
-    "sqlite3": "^4.0.3",
-    "axios": "^0.18.0",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1",
-    "styled-components": "^4.0.3"
+    "sqlite3": "^4.0.3"
   }
 }
