--- a/blog/package.json
+++ b/blog/package.json
@@ -4,9 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "compression": "^1.7.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "knex": "^0.15.2",
+    "morgan": "^1.9.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1",
+    "sqlite3": "^4.0.3",
     "styled-components": "^4.0.3"
   },
   "scripts": {
