--- a/blog/package.json
+++ b/blog/package.json
@@ -20,8 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "install": "cd blog && npm run build && cd .."
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
